<resources>
    <string name="app_name">SmartCity</string>
    <string name="login">Username</string>
    <string name="pass">Password</string>
    <string name="credenciais">Insira as suas credenciais:</string>
    <string name="newtitle">Insira o título:</string>
    <string name="newnota">Insira a nota:</string>
    <string name="edittitle">Edite o título:</string>
    <string name="editnota">Edite a nota:</string>
    <string name="guardar">Guardar</string>
    <string name="titulo">Título</string>

    <string name="yes">Sim</string>
    <string name="done">Dados removidos com sucesso!</string>
    <string name="doneone">Nota removida com sucesso!</string>
    <string name="no">Não</string>
    <string name="deleteevery">Deseja eliminar todos os dados?</string>
    <string name="deleteone">Deseja eliminar esta nota?</string>
    <string name="areyousure">Têm a certeza?</string>

    <string name="passworderrada">Password errada!</string>
    <string name="preenchercampos">Por favor preencha todos os campos</string>
    <string name="title_activity_mapa">Map</string>

    <string name="sucesso">Sucesso</string>
    <string name="erro">Map</string>
    <string name="TipoPonto">Tipo de ocorrência</string>
    <string name="descricao">Descrição</string>
    <string name="alterado">Alteração com Sucesso</string>
    <string name="voltar">Voltar</string>
    <string name="confirmar">Confirmar</string>
    <string name="noedit">Edição Não Disponível</string>
    <string name="editar">Editar</string>
    <string name="deletemarker">Marcador Apagado.</string>
    <string name="apagar">Apagar</string>
    <string name="deleteconfirma">Pretende apagar o Ponto?</string>
    <string name="nodelete">Não é possível apagar.</string>

</resources>